--- a/bkte_2_0_iar1.ioc
+++ b/bkte_2_0_iar1.ioc
@@ -121,12 +121,12 @@ FATFS0.BSP.mode=Input
 FATFS0.BSP.name=Detect_SDIO
 FATFS0.BSP.semaphore=
 FATFS0.BSP.solution=PD1
-FREERTOS.BinarySemaphores01=semLoraRxPckg,Dynamic,NULL;semCreateWebPckg,Dynamic,NULL
+FREERTOS.BinarySemaphores01=semCreateWebPckg,Dynamic,NULL;semSendWebPckg,Dynamic,NULL
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,Mutexes01,configUSE_TIMERS,MEMORY_ALLOCATION,configTOTAL_HEAP_SIZE,BinarySemaphores01,Queues01,configTIMER_QUEUE_LENGTH,configTIMER_TASK_STACK_DEPTH,Timers01
 FREERTOS.MEMORY_ALLOCATION=2
-FREERTOS.Mutexes01=mutexWriteToEnergyBuf,Dynamic,NULL;mutexWeb,Dynamic,NULL;mutexRTC,Dynamic,NULL;mutexSD,Dynamic,NULL;mutexSpiFlash,Dynamic,NULL
-FREERTOS.Queues01=queueWebPckg,3,WebPckg*,0,Dynamic,NULL,NULL
+FREERTOS.Mutexes01=mutexWriteToEnergyBuf,Dynamic,NULL;mutexWeb,Dynamic,NULL;mutexRTC,Dynamic,NULL;mutexSD,Dynamic,NULL;mutexSpiFlash,Dynamic,NULL;mutexSession,Dynamic,NULL
+FREERTOS.Queues01=queueWebPckg,8,WebPckg*,0,Dynamic,NULL,NULL
 FREERTOS.Tasks01=getEnergy,0,300,taskGetEnergy,As weak,NULL,Dynamic,NULL,NULL;getNewBin,0,300,taskGetNewBin,As weak,NULL,Dynamic,NULL,NULL;keepAlive,0,300,taskKeepAlive,As weak,NULL,Dynamic,NULL,NULL;webExchange,0,300,taskWebExchange,As weak,NULL,Dynamic,NULL,NULL;getTemp,0,300,taskGetTemp,As weak,NULL,Dynamic,NULL,NULL;manageIWDG,0,128,taskManageIWDG,As weak,NULL,Dynamic,NULL,NULL;lora,0,256,taskLora,As weak,NULL,Dynamic,NULL,NULL;createWebPckg,0,300,taskCreateWebPckg,As weak,NULL,Dynamic,NULL,NULL;wirelessSens,0,300,taskWirelessSens,As weak,NULL,Dynamic,NULL,NULL
 FREERTOS.Timers01=timerPowerOff,timerPowerOff_callback,osTimerOnce,As weak,NULL,Dynamic,NULL
 FREERTOS.configTIMER_QUEUE_LENGTH=1
