--- a/bkte_2_0_iar1.ioc
+++ b/bkte_2_0_iar1.ioc
@@ -1,11 +1,35 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion
-ADC1.NbrOfConversion=1
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_6
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_7
+ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_4
+ADC1.ContinuousConvMode=DISABLE
+ADC1.DMAContinuousRequests=ENABLE
+ADC1.EOCSelection=ADC_EOC_SEQ_CONV
+ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T2_TRGO
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,ContinuousConvMode,ScanConvMode,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,ExternalTrigConv,DMAContinuousRequests,EOCSelection
+ADC1.NbrOfConversion=4
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.Rank-1\#ChannelRegularConversion=2
+ADC1.Rank-2\#ChannelRegularConversion=3
+ADC1.Rank-3\#ChannelRegularConversion=4
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_28CYCLES
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_28CYCLES
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_28CYCLES
+ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_28CYCLES
+ADC1.ScanConvMode=ENABLE
 ADC1.master=1
+Dma.ADC1.8.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.8.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC1.8.Instance=DMA2_Stream0
+Dma.ADC1.8.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.8.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.8.Mode=DMA_CIRCULAR
+Dma.ADC1.8.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.8.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.8.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.8.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=SDIO_RX
 Dma.Request1=SDIO_TX
 Dma.Request2=USART6_RX
@@ -14,7 +38,8 @@ Dma.Request4=USART1_RX
 Dma.Request5=SPI2_RX
 Dma.Request6=SPI2_TX
 Dma.Request7=USART2_RX
-Dma.RequestsNb=8
+Dma.Request8=ADC1
+Dma.RequestsNb=9
 Dma.SDIO_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SDIO_RX.0.FIFOMode=DMA_FIFOMODE_ENABLE
 Dma.SDIO_RX.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
@@ -144,14 +169,13 @@ Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=CRC
 Mcu.IP10=SDIO
-Mcu.IP11=SPI1
-Mcu.IP12=SPI2
-Mcu.IP13=SYS
-Mcu.IP14=TIM6
-Mcu.IP15=USART1
-Mcu.IP16=USART2
-Mcu.IP17=USART3
-Mcu.IP18=USART6
+Mcu.IP11=SPI2
+Mcu.IP12=SYS
+Mcu.IP13=TIM2
+Mcu.IP14=USART1
+Mcu.IP15=USART2
+Mcu.IP16=USART3
+Mcu.IP17=USART6
 Mcu.IP2=DMA
 Mcu.IP3=FATFS
 Mcu.IP4=FREERTOS
@@ -160,72 +184,70 @@ Mcu.IP6=IWDG
 Mcu.IP7=NVIC
 Mcu.IP8=RCC
 Mcu.IP9=RTC
-Mcu.IPNb=19
+Mcu.IPNb=18
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
 Mcu.Pin10=PA3
 Mcu.Pin11=PA4
-Mcu.Pin12=PA5
-Mcu.Pin13=PA6
-Mcu.Pin14=PA7
-Mcu.Pin15=PC4
-Mcu.Pin16=PB1
-Mcu.Pin17=PB2
-Mcu.Pin18=PE8
-Mcu.Pin19=PE9
+Mcu.Pin12=PA6
+Mcu.Pin13=PA7
+Mcu.Pin14=PB1
+Mcu.Pin15=PB2
+Mcu.Pin16=PE8
+Mcu.Pin17=PE9
+Mcu.Pin18=PE10
+Mcu.Pin19=PE11
 Mcu.Pin2=PH0-OSC_IN
-Mcu.Pin20=PE10
-Mcu.Pin21=PE11
-Mcu.Pin22=PB10
-Mcu.Pin23=PB12
-Mcu.Pin24=PB13
-Mcu.Pin25=PB14
-Mcu.Pin26=PB15
-Mcu.Pin27=PD8
-Mcu.Pin28=PD9
-Mcu.Pin29=PD13
+Mcu.Pin20=PB10
+Mcu.Pin21=PB12
+Mcu.Pin22=PB13
+Mcu.Pin23=PB14
+Mcu.Pin24=PB15
+Mcu.Pin25=PD8
+Mcu.Pin26=PD9
+Mcu.Pin27=PD13
+Mcu.Pin28=PC6
+Mcu.Pin29=PC7
 Mcu.Pin3=PH1-OSC_OUT
-Mcu.Pin30=PC6
-Mcu.Pin31=PC7
-Mcu.Pin32=PC8
-Mcu.Pin33=PC9
-Mcu.Pin34=PA8
-Mcu.Pin35=PA9
-Mcu.Pin36=PA10
-Mcu.Pin37=PA13
-Mcu.Pin38=PA14
-Mcu.Pin39=PC10
+Mcu.Pin30=PC8
+Mcu.Pin31=PC9
+Mcu.Pin32=PA8
+Mcu.Pin33=PA9
+Mcu.Pin34=PA10
+Mcu.Pin35=PA13
+Mcu.Pin36=PA14
+Mcu.Pin37=PC10
+Mcu.Pin38=PC11
+Mcu.Pin39=PC12
 Mcu.Pin4=PC0
-Mcu.Pin40=PC11
-Mcu.Pin41=PC12
-Mcu.Pin42=PD0
-Mcu.Pin43=PD1
-Mcu.Pin44=PD2
-Mcu.Pin45=PD3
-Mcu.Pin46=PD4
-Mcu.Pin47=PD5
-Mcu.Pin48=PD6
-Mcu.Pin49=PD7
+Mcu.Pin40=PD0
+Mcu.Pin41=PD1
+Mcu.Pin42=PD2
+Mcu.Pin43=PD3
+Mcu.Pin44=PD4
+Mcu.Pin45=PD5
+Mcu.Pin46=PD6
+Mcu.Pin47=PD7
+Mcu.Pin48=PB6
+Mcu.Pin49=PB7
 Mcu.Pin5=PC1
-Mcu.Pin50=PB6
-Mcu.Pin51=PB7
-Mcu.Pin52=PE0
-Mcu.Pin53=PE1
-Mcu.Pin54=VP_CRC_VS_CRC
-Mcu.Pin55=VP_FATFS_VS_SDIO
-Mcu.Pin56=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin57=VP_IWDG_VS_IWDG
-Mcu.Pin58=VP_RTC_VS_RTC_Activate
-Mcu.Pin59=VP_RTC_VS_RTC_Calendar
+Mcu.Pin50=PE0
+Mcu.Pin51=PE1
+Mcu.Pin52=VP_CRC_VS_CRC
+Mcu.Pin53=VP_FATFS_VS_SDIO
+Mcu.Pin54=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin55=VP_IWDG_VS_IWDG
+Mcu.Pin56=VP_RTC_VS_RTC_Activate
+Mcu.Pin57=VP_RTC_VS_RTC_Calendar
+Mcu.Pin58=VP_SYS_VS_tim1
+Mcu.Pin59=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin6=PC2
-Mcu.Pin60=VP_SYS_VS_tim1
-Mcu.Pin61=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin7=PA0-WKUP
 Mcu.Pin8=PA1
 Mcu.Pin9=PA2
-Mcu.PinsNb=62
+Mcu.PinsNb=60
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -235,6 +257,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream3_IRQn=true\:5\:0\:true\:false\:true\:false\:false\:true
 NVIC.DMA1_Stream4_IRQn=true\:5\:0\:true\:false\:true\:false\:false\:true
 NVIC.DMA1_Stream5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
+NVIC.DMA2_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DMA2_Stream1_IRQn=true\:5\:0\:true\:false\:true\:false\:false\:true
 NVIC.DMA2_Stream2_IRQn=true\:5\:0\:true\:false\:true\:false\:false\:true
 NVIC.DMA2_Stream3_IRQn=true\:5\:0\:true\:false\:true\:false\:false\:true
@@ -242,7 +265,6 @@ NVIC.DMA2_Stream6_IRQn=true\:5\:0\:true\:false\:true\:false\:false\:true
 NVIC.DMA2_Stream7_IRQn=true\:5\:0\:true\:false\:true\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI1_IRQn=true\:5\:0\:true\:false\:true\:false\:true\:true
-NVIC.EXTI4_IRQn=true\:5\:0\:true\:false\:true\:false\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.I2C1_ER_IRQn=true\:5\:0\:true\:false\:true\:false\:true\:true
@@ -252,7 +274,6 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SDIO_IRQn=true\:5\:0\:true\:false\:true\:false\:true\:true
-NVIC.SPI1_IRQn=true\:5\:0\:true\:false\:true\:false\:true\:true
 NVIC.SPI2_IRQn=true\:5\:0\:true\:false\:true\:false\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.SavedPendsvIrqHandlerGenerated=true
@@ -288,16 +309,17 @@ PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=SPI1_CS_LORA
+PA4.GPIO_Label=ADC_CUR_3
 PA4.Locked=true
-PA4.Signal=GPIO_Output
-PA5.Mode=Full_Duplex_Master
-PA5.Signal=SPI1_SCK
+PA4.Signal=ADCx_IN4
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=ADC_CUR_1
 PA6.Locked=true
-PA6.Mode=Full_Duplex_Master
-PA6.Signal=SPI1_MISO
-PA7.Mode=Full_Duplex_Master
-PA7.Signal=SPI1_MOSI
+PA6.Signal=ADCx_IN6
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=ADC_CUR_2
+PA7.Locked=true
+PA7.Signal=ADCx_IN7
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=UART1_RE
 PA8.Locked=true
@@ -357,10 +379,6 @@ PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=SIM_PWR_EN
 PC2.Locked=true
 PC2.Signal=GPIO_Output
-PC4.GPIOParameters=GPIO_Label
-PC4.GPIO_Label=IRQ_LORA
-PC4.Locked=true
-PC4.Signal=GPXTI4
 PC6.Locked=true
 PC6.Mode=Asynchronous
 PC6.Signal=USART6_TX
@@ -467,7 +485,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=EWARM V8.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-LL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_SDIO_SD_Init-SDIO-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false,9-MX_CRC_Init-CRC-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,12-MX_USART6_UART_Init-USART6-false-HAL-true,13-MX_RTC_Init-RTC-false-HAL-true,14-MX_IWDG_Init-IWDG-false-LL-true,15-MX_USART1_UART_Init-USART1-false-HAL-true,16-MX_TIM6_Init-TIM6-false-HAL-true,17-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-LL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_SDIO_SD_Init-SDIO-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_FATFS_Init-FATFS-false-HAL-false,8-MX_CRC_Init-CRC-false-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true,10-MX_USART3_UART_Init-USART3-false-HAL-true,11-MX_USART6_UART_Init-USART6-false-HAL-true,12-MX_RTC_Init-RTC-false-HAL-true,13-MX_IWDG_Init-IWDG-false-LL-true,14-MX_USART1_UART_Init-USART1-false-HAL-true,15-MX_USART2_UART_Init-USART2-false-HAL-true,16-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.48MHZClocksFreq_Value=22400000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -514,22 +532,24 @@ SDIO.ClockDiv=25
 SDIO.IPParameters=ClockDiv
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
+SH.ADCx_IN4.0=ADC1_IN4,IN4
+SH.ADCx_IN4.ConfNb=1
+SH.ADCx_IN6.0=ADC1_IN6,IN6
+SH.ADCx_IN6.ConfNb=1
+SH.ADCx_IN7.0=ADC1_IN7,IN7
+SH.ADCx_IN7.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
-SH.GPXTI4.0=GPIO_EXTI4
-SH.GPXTI4.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
-SPI1.CalculateBaudRate=656.25 KBits/s
-SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
-SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualType=VM_MASTER
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
 SPI2.CalculateBaudRate=5.25 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
+TIM2.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
+TIM2.Period=10000
+TIM2.Prescaler=839
+TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 USART1.BaudRate=2400
 USART1.IPParameters=VirtualMode,BaudRate,WordLength
 USART1.VirtualMode=VM_ASYNC
@@ -555,6 +575,6 @@ VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
-VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
-VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
