Удалены лишние файлы и функции

--- a/bkte_2_0_iar1.ioc
+++ b/bkte_2_0_iar1.ioc
@@ -146,13 +146,13 @@ FATFS0.BSP.mode=Input
 FATFS0.BSP.name=Detect_SDIO
 FATFS0.BSP.semaphore=
 FATFS0.BSP.solution=PD1
-FREERTOS.BinarySemaphores01=semCreateWebPckg,Dynamic,NULL;semSendWebPckg,Dynamic,NULL
+FREERTOS.BinarySemaphores01=semCreateWebPckg,Dynamic,NULL;semSendWebPckg,Dynamic,NULL;semCurrMeasure,Dynamic,NULL
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,Mutexes01,configUSE_TIMERS,MEMORY_ALLOCATION,configTOTAL_HEAP_SIZE,BinarySemaphores01,Queues01,configTIMER_QUEUE_LENGTH,configTIMER_TASK_STACK_DEPTH,Timers01
 FREERTOS.MEMORY_ALLOCATION=2
-FREERTOS.Mutexes01=mutexWriteToEnergyBuf,Dynamic,NULL;mutexWeb,Dynamic,NULL;mutexRTC,Dynamic,NULL;mutexSD,Dynamic,NULL;mutexSpiFlash,Dynamic,NULL;mutexSession,Dynamic,NULL
+FREERTOS.Mutexes01=mutexBigBuf,Dynamic,NULL;mutexWeb,Dynamic,NULL;mutexRTC,Dynamic,NULL;mutexSD,Dynamic,NULL;mutexSpiFlash,Dynamic,NULL;mutexSession,Dynamic,NULL
 FREERTOS.Queues01=queueWebPckg,8,WebPckg*,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=getEnergy,0,300,taskGetEnergy,As weak,NULL,Dynamic,NULL,NULL;getNewBin,0,300,taskGetNewBin,As weak,NULL,Dynamic,NULL,NULL;keepAlive,0,300,taskKeepAlive,As weak,NULL,Dynamic,NULL,NULL;webExchange,0,300,taskWebExchange,As weak,NULL,Dynamic,NULL,NULL;getTemp,0,300,taskGetTemp,As weak,NULL,Dynamic,NULL,NULL;manageIWDG,0,128,taskManageIWDG,As weak,NULL,Dynamic,NULL,NULL;lora,0,256,taskLora,As weak,NULL,Dynamic,NULL,NULL;createWebPckg,0,300,taskCreateWebPckg,As weak,NULL,Dynamic,NULL,NULL;wirelessSens,0,300,taskWirelessSens,As weak,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=getCurrent,0,300,taskCurMeasure,As weak,NULL,Dynamic,NULL,NULL;getNewBin,0,300,taskGetNewBin,As weak,NULL,Dynamic,NULL,NULL;keepAlive,0,300,taskKeepAlive,As weak,NULL,Dynamic,NULL,NULL;webExchange,0,300,taskWebExchange,As weak,NULL,Dynamic,NULL,NULL;manageIWDG,0,128,taskManageIWDG,As weak,NULL,Dynamic,NULL,NULL;createWebPckg,0,300,taskCreateWebPckg,As weak,NULL,Dynamic,NULL,NULL
 FREERTOS.Timers01=timerPowerOff,timerPowerOff_callback,osTimerOnce,As weak,NULL,Dynamic,NULL
 FREERTOS.configTIMER_QUEUE_LENGTH=1
 FREERTOS.configTIMER_TASK_STACK_DEPTH=128
@@ -547,8 +547,8 @@ SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 TIM2.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
-TIM2.Period=10000
-TIM2.Prescaler=839
+TIM2.Period=1000
+TIM2.Prescaler=83
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 USART1.BaudRate=2400
 USART1.IPParameters=VirtualMode,BaudRate,WordLength
