Добавлен новый алгоритм поиска максимумов

--- a/bkte_2_0_iar1.ioc
+++ b/bkte_2_0_iar1.ioc
@@ -150,7 +150,7 @@ FREERTOS.BinarySemaphores01=semCreateWebPckg,Dynamic,NULL;semSendWebPckg,Dynamic
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,Mutexes01,configUSE_TIMERS,MEMORY_ALLOCATION,configTOTAL_HEAP_SIZE,BinarySemaphores01,Queues01,configTIMER_QUEUE_LENGTH,configTIMER_TASK_STACK_DEPTH,Timers01
 FREERTOS.MEMORY_ALLOCATION=2
-FREERTOS.Mutexes01=mutexBigBuf,Dynamic,NULL;mutexWeb,Dynamic,NULL;mutexRTC,Dynamic,NULL;mutexSD,Dynamic,NULL;mutexSpiFlash,Dynamic,NULL;mutexSession,Dynamic,NULL
+FREERTOS.Mutexes01=mutexBigBuf,Dynamic,NULL;mutexWeb,Dynamic,NULL;mutexRTC,Dynamic,NULL;mutexSD,Dynamic,NULL;mutexSpiFlash,Dynamic,NULL;mutexSession,Dynamic,NULL;mutexCurrMeasure,Dynamic,NULL
 FREERTOS.Queues01=queueWebPckg,8,WebPckg*,0,Dynamic,NULL,NULL
 FREERTOS.Tasks01=getCurrent,0,300,taskCurMeasure,As weak,NULL,Dynamic,NULL,NULL;getNewBin,0,300,taskGetNewBin,As weak,NULL,Dynamic,NULL,NULL;keepAlive,0,300,taskKeepAlive,As weak,NULL,Dynamic,NULL,NULL;webExchange,0,300,taskWebExchange,As weak,NULL,Dynamic,NULL,NULL;manageIWDG,0,128,taskManageIWDG,As weak,NULL,Dynamic,NULL,NULL;createWebPckg,0,300,taskCreateWebPckg,As weak,NULL,Dynamic,NULL,NULL
 FREERTOS.Timers01=timerPowerOff,timerPowerOff_callback,osTimerOnce,As weak,NULL,Dynamic,NULL
